syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "production_line.proto";

message MaterialShelfInfo{
    string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //货架类型
    int32 shelfType=4;
    //是否启用
    bool enable=5;
    //当前状态
    string currentState=6;
    //状态变更时间
    string lastUpdateTime=7;
    //备注
    string remark=8;
    //隶属产线ID
    string productionLineID=9;
    ProductionLineInfo productionLine=10;
    //当前泊位ID
    string aGVParkingSpaceID=11;
    AGVParkingSpaceInfo aGVParkingSpace=12;
    //可停靠泊位
    repeated string parkableSpaceIDs=14;
    repeated MaterialShelfAvailableSpaceInfo parkableSpaces=13;
}

message MaterialShelfAvailableSpaceInfo{
    string id=1;
    string materialShelfID=2;
    string aGVParkingSpaceID=3;
    AGVParkingSpaceInfo aGVParkingSpace=4;
}

message QueryMaterialShelfRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    //隶属产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=8;
}

message QueryMaterialShelfResponse{
    Code code=1;
    string message=2;
    repeated MaterialShelfInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialShelfResponse{
    Code code=1;
    string message=2;
    repeated MaterialShelfInfo data=3;
}

message GetMaterialShelfDetailResponse{
    Code code=1;
    string message=2;
    MaterialShelfInfo data=3;
}


message AGVParkingSpaceInfo {
	//ID 
 	string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //识别码
    string identifier=4;
    //泊位类型
    int32 spaceType=5;
    //货架类型
    int32 shelfType=6;
    //允许停靠
    bool enablePark=7;
    //允许签派
    bool enableDispatch=8;
    //当前状态
    string currentState=9;
    //状态变更时间
    string lastUpdateTime=10;
    //备注
    string remark=11;
    //隶属产线ID
    string productionLineID=12;
    ProductionLineInfo productionLine=13;
    //当前货架ID
    string materialShelfID=14;
    MaterialShelfInfo materialShelf=15;
}

message QueryAGVParkingSpaceRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	// 代号或描述 
	// @inject_tag: uri:"code" form:"code"
    string code=6;
    //隶属产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=12;
}

message QueryAGVParkingSpaceResponse{
    Code code=1;
    string message=2;
    repeated AGVParkingSpaceInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllAGVParkingSpaceResponse{
    Code code=1;
    string message=2;
    repeated AGVParkingSpaceInfo data=3;
}

message GetAGVParkingSpaceDetailResponse{
    Code code=1;
    string message=2;
    AGVParkingSpaceInfo data=3;
}